---
= Novidades com os recursos de administração de fábrica do workload do BlueXP 
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Saiba o que há de novo com os recursos de administração de fábrica de carga de trabalho: Credenciais de provedor de nuvem, aprimoramentos de Codebox e muito mais.



== 04 de maio de 2025



=== Suporte autocompleto do CloudShell

Ao usar o CloudShell de fábrica de carga de trabalho do BlueXP , você pode começar a digitar um comando e pressionar a tecla Tab para exibir as opções disponíveis. Se houver várias possibilidades, a CLI exibirá uma lista de sugestões. Esse recurso aumenta a produtividade minimizando erros e acelerando a execução de comandos.



=== Terminologia de permissões atualizada

A interface do usuário e a documentação do Workload Factory agora usam "somente leitura" para se referir às permissões de leitura e "leitura/gravação" para se referir às permissões de automação.



== 30 de março de 2025



=== O CloudShell relata respostas de erro geradas por IA para os comandos da CLI do ONTAP

Ao usar o CloudShell, cada vez que você emite um comando ONTAP CLI e um erro ocorre, você pode obter respostas de erro geradas por IA que incluem uma descrição da falha, a causa da falha e uma resolução detalhada.

link:https://docs.netapp.com/us-en/workload-setup-admin/use-cloudshell.html["Use o CloudShell"]



=== IAM:Atualização de permissão SimulatePermissionPolicy

Agora você pode gerenciar a `iam:SimulatePrincipalPolicy` permissão no console de fábrica de workload ao adicionar credenciais adicionais de conta da AWS ou adicionar uma nova funcionalidade de workload, como o workload do GenAI.

link:https://docs.netapp.com/us-en/workload-setup-admin/permissions-reference.html#change-log["Log de alteração de referência de permissões"]



== 02 de fevereiro de 2025



=== CloudShell disponível no console de fábrica da carga de trabalho do BlueXP 
